[gd_scene load_steps=11 format=3 uid="uid://xfwcmndnkomw"]

[ext_resource type="Script" path="res://environment/electric_wire.gd" id="1_rvl3e"]
[ext_resource type="PackedScene" uid="uid://dscsbre0lxqrb" path="res://experimental/death_sentence.tscn" id="2_1u6bw"]

[sub_resource type="Curve2D" id="Curve2D_axy07"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 32, -16, 63.6424, 25.7145, -63.6424, -25.7145, 0, 48, 0, 0, 0, 0, -16, -8)
}
point_count = 3

[sub_resource type="Gradient" id="Gradient_1inha"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.183099, 0.697183)
colors = PackedColorArray(0, 0, 0, 1, 0.866819, 0.240085, 0.0964406, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_cbs6l"]
frequency = 0.0684

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_kd7j4"]
width = 400
height = 10
color_ramp = SubResource("Gradient_1inha")
noise = SubResource("FastNoiseLite_cbs6l")

[sub_resource type="Curve" id="Curve_8bixa"]
_data = [Vector2(0, 0.725275), 0.0, 2.10651, 0, 0, Vector2(1, 0.362637), -4.54307, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_76kgm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SparkEmitter:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_r3r5c"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SparkEmitter:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d2vkf"]
_data = {
"RESET": SubResource("Animation_76kgm"),
"new_animation": SubResource("Animation_r3r5c")
}

[node name="ElectricWire" type="Path2D"]
curve = SubResource("Curve2D_axy07")
script = ExtResource("1_rvl3e")

[node name="Isolation" type="Line2D" parent="."]
visible = false
width = 8.0
texture = SubResource("NoiseTexture2D_kd7j4")
texture_mode = 2

[node name="SparkMover" type="PathFollow2D" parent="."]
visible = false
position = Vector2(16, 32)
rotates = false

[node name="SparkEmitter" type="CPUParticles2D" parent="SparkMover"]
emitting = false
lifetime = 0.6
explosiveness = 0.21
randomness = 0.72
direction = Vector2(0, -1)
gravity = Vector2(0, 1200)
initial_velocity_min = 262.29
initial_velocity_max = 423.79
linear_accel_min = 64.65
linear_accel_max = 64.65
scale_amount_min = 4.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("Curve_8bixa")
color = Color(1, 1, 0.247059, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="SparkMover"]
libraries = {
"": SubResource("AnimationLibrary_d2vkf")
}
speed_scale = 5.0

[node name="DeathSentence" parent="SparkMover" instance=ExtResource("2_1u6bw")]
